--- a/Plataforma/dccomics/index.html
+++ b/Plataforma/dccomics/index.html
@@ -200,7 +200,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
       <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Aves De Presa y La Fantabulosa Emancipacion De Una Harley Quinn -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula695.html">
+  <a href="../../Peliculas/pelicula695.html">
     <img src="https://image.tmdb.org/t/p/original/1wLqXiiiaTSK8Y0n7N85O0jaNJm.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -210,7 +210,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2020</div>
 </article><!-- Batman del futuro -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie71.html">
+  <a href="../../Series/serie71.html">
     <img src="https://image.tmdb.org/t/p/original/rpbHPyhLstNd5qgtjaDMdPtyPeQ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -220,7 +220,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">1999</div>
 </article><!-- Batman, el Valiente -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie70.html">
+  <a href="../../Series/serie70.html">
     <img src="https://image.tmdb.org/t/p/original/ukXZ1N9Pd99vDNetFKYNpFYgoXF.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -230,7 +230,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2008</div>
 </article><!-- Batman -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula566.html">
+  <a href="../../Peliculas/pelicula566.html">
     <img src="https://image.tmdb.org/t/p/original/mo7teil1qH0SxgLijnqeYP1Eb4w.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -240,7 +240,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2022</div>
 </article><!-- Batman inicia -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula565.html">
+  <a href="../../Peliculas/pelicula565.html">
     <img src="https://image.tmdb.org/t/p/original/6yMWU1vWkOBbNRIwOxhetd2aHhO.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -250,7 +250,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2005</div>
 </article><!-- Batman: El caballero de la noche -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula564.html">
+  <a href="../../Peliculas/pelicula564.html">
     <img src="https://image.tmdb.org/t/p/original/8QDQExnfNFOtabLDKqfDQuHDsIg.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -260,7 +260,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2008</div>
 </article><!-- Batman: El caballero de la noche asciende -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula563.html">
+  <a href="../../Peliculas/pelicula563.html">
     <img src="https://image.tmdb.org/t/p/original/rrS7K8tXVFUBliIKWaRuSq65nWr.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -270,7 +270,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2012</div>
 </article><!-- La Liga de la Justicia: La paradoja del tiempo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula531.html">
+  <a href="../../Peliculas/pelicula531.html">
     <img src="https://image.tmdb.org/t/p/original/jOIH3wCtz3y4DonPDoHqSz0VjDj.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -280,7 +280,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2013</div>
 </article><!-- Liga de la Justicia x RWBY: Superheroes y Cazadores: Parte 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula530.html">
+  <a href="../../Peliculas/pelicula530.html">
     <img src="https://image.tmdb.org/t/p/original/cyh9hxRjItIOb0gMt2P44LXnUMH.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -290,7 +290,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2023</div>
 </article><!-- Liga de la Justicia x RWBY: Superheroes y Cazadores: Parte 1 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula529.html">
+  <a href="../../Peliculas/pelicula529.html">
     <img src="https://image.tmdb.org/t/p/original/7twNCiHS1rR7P2fyGOH1sUmLDyY.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -300,7 +300,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2023</div>
 </article><!-- La Liga de la Justicia de Zack Snyder -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula478.html">
+  <a href="../../Peliculas/pelicula478.html">
     <img src="https://image.tmdb.org/t/p/original/wcIJgChypo0s6ILm9Dkr13rV5q0.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -310,7 +310,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2021</div>
 </article><!-- Liga de la Justicia: Crisis en Tierras Infinitas - Parte 1 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula477.html">
+  <a href="../../Peliculas/pelicula477.html">
     <img src="https://image.tmdb.org/t/p/original/kr36D6FiF8mNrsPz4fL6OUAvrrJ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -320,7 +320,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2024</div>
 </article><!-- Liga de la Justicia -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula476.html">
+  <a href="../../Peliculas/pelicula476.html">
     <img src="https://image.tmdb.org/t/p/original/wUWqnavD8iGZ5F4xXhWlrtEzKjV.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -330,7 +330,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2017</div>
 </article><!-- Superman y Lois -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie19.html">
+  <a href="../../Series/serie19.html">
     <img src="https://image.tmdb.org/t/p/original/hlMO1juHPuaiyL27BDLUcAvxmqq.jpg" alt="Superman y Lois" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -350,7 +350,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2022</div>
 </article><!-- Aquaman y el reino perdido -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula254.html">
+  <a href="../../Peliculas/pelicula254.html">
     <img src="https://image.tmdb.org/t/p/original/a0QwtpUNIKjOlNoOVmk7d2LFnQW.jpg" alt="Aquaman y el reino perdido" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -360,7 +360,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2023</div>
 </article><!-- Aquaman -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula253.html">
+  <a href="../../Peliculas/pelicula253.html">
     <img src="https://image.tmdb.org/t/p/original/yTzr6Nc4RcTXVw9SsWQNJdcjTz5.jpg" alt="Aquaman" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -371,7 +371,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </article>
 <!-- LEGO DC Comics Super Heroes: The Flash -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula178.html">
+  <a href="../../Peliculas/pelicula178.html">
     <img src="https://image.tmdb.org/t/p/original/AnPwhS4narxS6fD7fHuhehfnQzz.jpg" alt="LEGO DC Comics Super Heroes: The Flash" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
