--- a/Plataforma/dreamworks/index.html
+++ b/Plataforma/dreamworks/index.html
@@ -161,7 +161,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
       <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Como Entrenar a tu Dragon: Regreso a Casa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula732.html">
+  <a href="../../Peliculas/pelicula732.html">
     <img src="https://image.tmdb.org/t/p/original/n12wESAYZNqa88h4EzdD25bJRYR.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -171,7 +171,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2019</div>
 </article><!-- Como Entrenar A Tu Dragon -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula731.html">
+  <a href="../../Peliculas/pelicula731.html">
     <img src="https://image.tmdb.org/t/p/original/8ekxsUORMAsfmSc8GzHmG8gWPbp.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -181,7 +181,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2010</div>
 </article><!-- Los Croods 2: Una Nueva Era -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula669.html">
+  <a href="../../Peliculas/pelicula669.html">
     <img src="https://image.tmdb.org/t/p/original/5uMWKEmegf5aTJnp1u98JF4QerP.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -191,7 +191,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2020</div>
 </article><!-- Los Croods -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula668.html">
+  <a href="../../Peliculas/pelicula668.html">
     <img src="https://image.tmdb.org/t/p/original/3X3qtBTgKt5mCB30RJwbIjgjzdw.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -201,7 +201,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2013</div>
 </article><!-- El aro 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula620.html">
+  <a href="../../Peliculas/pelicula620.html">
     <img src="https://image.tmdb.org/t/p/original/atARS3tVYd8rQMxKS7POErIZGCK.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -211,7 +211,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2005</div>
 </article><!-- Transformers: la venganza de los caidos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula595.html">
+  <a href="../../Peliculas/pelicula595.html">
     <img src="https://image.tmdb.org/t/p/original/qzEIlhHivIcpKhKVOkb61eBz2Mv.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -221,7 +221,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2009</div>
 </article><!-- Transformers -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula594.html">
+  <a href="../../Peliculas/pelicula594.html">
     <img src="https://image.tmdb.org/t/p/original/jNZOozjyWKC0jTTvpZ3KOobGcED.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -231,7 +231,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2007</div>
 </article><!-- Norbit -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula511.html">
+  <a href="../../Peliculas/pelicula511.html">
     <img src="https://image.tmdb.org/t/p/original/cCAeo4Yx2osjmj2YHNUyQmZJxdj.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -241,7 +241,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2007</div>
 </article><!-- Spirit: El corcel indomable -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula370.html">
+  <a href="../../Peliculas/pelicula370.html">
     <img src="https://image.tmdb.org/t/p/original/gNRQdU3KEsYTIl4y9Xte3onUSsx.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -251,7 +251,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2002</div>
 </article><!-- Gigantes de Acero -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula332.html">
+  <a href="../../Peliculas/pelicula332.html">
     <img src="https://image.tmdb.org/t/p/original/2iYS1XVm8vh5vokZhO3N4dtgODn.jpg" alt="Gigantes de Acero" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -261,7 +261,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2011</div>
 </article><!-- Gato con Botas: El ultimo deseo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula286.html">
+  <a href="../../Peliculas/pelicula286.html">
     <img src="https://image.tmdb.org/t/p/original/b5Jb7GoQaqIXy4VEdnQa0UrQZI.jpg" alt="Gato con Botas: El último deseo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -271,7 +271,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2022</div>
 </article><!-- Gato con botas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula285.html">
+  <a href="../../Peliculas/pelicula285.html">
     <img src="https://image.tmdb.org/t/p/original/1VmrC82zY4U33l9UHlZTWDB1asN.jpg" alt="Gato con botas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -281,7 +281,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2011</div>
 </article><!-- Como Entrenar a Tu Dragon: El regalo de Furia Nocturna -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula241.html">
+  <a href="../../Peliculas/pelicula241.html">
     <img src="https://image.tmdb.org/t/p/original/qwUYVh1ogG8tsDWQli18akSXHEt.jpg" alt="Cómo Entrenar a Tu Dragón: El regalo de Furia Nocturna" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -291,7 +291,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2011</div>
 </article><!-- Como Entrenar A Tu Dragon 3 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula240.html">
+  <a href="../../Peliculas/pelicula240.html">
     <img src="https://image.tmdb.org/t/p/original/rhnoAReqO3Xoe6GbJhT3409lnq8.jpg" alt="Cómo Entrenar A Tu Dragón 3" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -301,7 +301,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2019</div>
 </article><!-- Como entrenar a tu dragon 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula239.html">
+  <a href="../../Peliculas/pelicula239.html">
     <img src="https://image.tmdb.org/t/p/original/bXcRw7FL8QzUZOvY2fZdwDv5ymQ.jpg" alt="Cómo entrenar a tu dragón 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -312,7 +312,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </article>
       <!-- La Guerra de los Mundos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula210.html">
+  <a href="../../Peliculas/pelicula210.html">
     <img src="https://image.tmdb.org/t/p/original/voW0ysgAalYWqm2SsBzSfkNNN1K.jpg" alt="La Guerra de los Mundos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -322,7 +322,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2005</div>
 </article><!-- Shrek 4: Para Siempre -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula208.html">
+  <a href="../../Peliculas/pelicula208.html">
     <img src="https://image.tmdb.org/t/p/original/3MyKXb1ozCfq61tPNKpIggwvP6J.jpg" alt="Shrek 4: Para Siempre" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -332,7 +332,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2010</div>
 </article><!-- Shrek Tercero -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula207.html">
+  <a href="../../Peliculas/pelicula207.html">
     <img src="https://image.tmdb.org/t/p/original/7sTwtmVPTX77CFOUXdwAM7lKtKL.jpg" alt="Shrek Tercero" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -342,7 +342,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2007</div>
 </article><!-- Shrek 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula206.html">
+  <a href="../../Peliculas/pelicula206.html">
     <img src="https://image.tmdb.org/t/p/original/knRt4E8KyfwEv0SVu9LsLvD28IQ.jpg" alt="Shrek 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -352,7 +352,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2004</div>
 </article><!-- Shrek -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula205.html">
+  <a href="../../Peliculas/pelicula205.html">
     <img src="https://image.tmdb.org/t/p/original/5G1RjHMSt7nYONqCqSwFlP87Ckk.jpg" alt="Shrek" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -364,7 +364,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!-- Historias Cruzadas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula151.html">
+  <a href="../../Peliculas/pelicula151.html">
     <img src="https://image.tmdb.org/t/p/original/jki2RrXEE4x6RT2qyQzOVIXYlsn.jpg" alt="Historias Cruzadas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
