--- a/Plataforma/hbomax/index.html
+++ b/Plataforma/hbomax/index.html
@@ -172,7 +172,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
     <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El visitante -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie69.html">
+  <a href="../../Series/serie69.html">
     <img src="https://image.tmdb.org/t/p/original/foegemcN2ZS7dQI30NIfWpRl2Ls.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -182,7 +182,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2020</div>
 </article><!-- Hermano de Jorel especial de navidad: Hermano de Noel -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula661.html">
+  <a href="../../Peliculas/pelicula661.html">
     <img src="https://image.tmdb.org/t/p/original/3GWWAAh44ek8FuMRRP8FkK9MJn5.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -192,7 +192,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2022</div>
 </article><!-- Efectos colaterales -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie31.html">
+  <a href="../../Series/serie31.html">
     <img src="https://image.tmdb.org/t/p/original/9f0vthsiAS3OpTbIbH9qpCzAL3A.jpg" alt="Efectos colaterales" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -202,7 +202,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2025</div>
 </article><!-- Euphoria -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie28.html">
+  <a href="../../Series/serie28.html">
     <img src="https://image.tmdb.org/t/p/original/6Sdm5XwdCnspdEF8fTFx6UJrl7o.jpg" alt="Euphoria" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -212,7 +212,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2019</div>
 </article><!-- Peacemaker -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie18.html">
+  <a href="../../Series/serie18.html">
     <img src="https://image.tmdb.org/t/p/original/t7NakS7qZekeXSocv6jcyd5on7A.jpg" alt="Peacemaker" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -222,7 +222,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2022</div>
 </article><!-- Criatura voraz -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula237.html">
+  <a href="../../Peliculas/pelicula237.html">
     <img src="https://image.tmdb.org/t/p/original/iinb9KTcTqVWVj8sgNIFssaUGae.jpg" alt="Criatura voraz" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -234,7 +234,7 @@ document.addEventListener("DOMContentLoaded", () => {
     
 <!-- The Last of Us -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie15.html">
+  <a href="../../Series/serie15.html">
     <img src="https://image.tmdb.org/t/p/original/tNQWO6cNzQYCyvw36mUcAQQyf5F.jpg" alt="The Last of Us" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
