--- a/Plataforma/k-drama/index.html
+++ b/Plataforma/k-drama/index.html
@@ -172,7 +172,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
     <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Happiness -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie56.html">
+  <a href="../../Series/serie56.html">
     <img src="https://image.tmdb.org/t/p/original/nybuVbXOWvB3DAAvLSEemamyVcc.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -222,7 +222,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2021</div>
 </article><!-- Ziam -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula411.html">
+  <a href="../../Peliculas/pelicula411.html">
     <img src="https://image.tmdb.org/t/p/original/7ZRXha6VZEGP3C8Kab7pPwSMzDZ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -232,7 +232,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2025</div>
 </article> <!-- Cuando el telefono suena -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie43.html">
+  <a href="../../Series/serie43.html">
     <img src="https://image.tmdb.org/t/p/original/6UnZi4kWQLWmbO0D9qV8VE9eMfj.jpg" alt="Cuando el teléfono suena" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -242,7 +242,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2024</div>
 </article><!-- Amor en el laboratorio -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie24.html">
+  <a href="../../Series/serie24.html">
     <img src="https://image.tmdb.org/t/p/original/ngHpVJ3M5xWhcXkyYFRu0SeaBGh.jpg" alt="Amor en el laboratorio" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -252,7 +252,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2025</div>
 </article><!-- Luces, camara, ¡amor! -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie21.html">
+  <a href="../../Series/serie21.html">
     <img src="https://image.tmdb.org/t/p/original/cQNyo6x90VMmklNEprjzOgk1ibu.jpg" alt="Luces, cámara, ¡amor!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -283,7 +283,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </article>
     <!-- Los desenredos del amor -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula374.html">
+  <a href="../../Peliculas/pelicula374.html">
     <img src="https://image.tmdb.org/t/p/original/osrlCIHYOlqOJaDh7zAaeaqh1LF.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
